--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "aiomysql>=0.2.0",
     "pymysql>=1.1.0",
     "greenlet>=2.0.0",
-    "webdriver-manager>=4.0.1"
+    "cssselect>=1.2.0"
 ]
 
 [project.optional-dependencies]
