--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DEBUG=true
 API_PREFIX=/api
 OPENAI_API_KEY=k-kh5dDiP76fy07AOKAfF9KSjR0Lpb5OdThhs29PWpOxLb2rIq
 OPENAI_BASE_URL=https://api.gpts.vin/v1/chat/completions
-CHROME_DRIVER_PATH=/opt/homebrew/bin/chromedriver
-DATABASE_URL=mysql+aiomysql://root:root@localhost:3306/ugcData 
+# CHROME_DRIVER_PATH=../resources/chromedriver.exe  放到app/core/settings.py中
+DATABASE_URL=mysql+aiomysql://root:123456@localhost:3306/ugcData 
