--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ APP_NAME="UGC Content Generator"
 DEBUG=true
 API_PREFIX=/api
 OPENAI_API_KEY=k-kh5dDiP76fy07AOKAfF9KSjR0Lpb5OdThhs29PWpOxLb2rIq
-OPENAI_BASE_URL=https://api.gpts.vin/v1/chat/completions
+OPENAI_BASE_URL=https://api.gpts.vin
 # CHROME_DRIVER_PATH=../resources/chromedriver.exe  放到app/core/settings.py中
-DATABASE_URL=mysql+aiomysql://root:123456@localhost:3306/ugcData 
+DATABASE_URL=mysql+aiomysql://root:root@localhost:3306/ugcData 
