--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,11 +26,7 @@ dependencies = [
     "aiomysql>=0.2.0",
     "pymysql>=1.1.0",
     "greenlet>=2.0.0",
-    "cssselect>=1.2.0",
-    "requests>=2.31.0",
-    "beautifulsoup4>=4.12.0",
-    "lxml>=4.9.0",
-    "apify"
+    "cssselect>=1.2.0"
 ]
 
 [project.optional-dependencies]
