--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,9 @@ dependencies = [
     "pymysql>=1.1.0",
     "greenlet>=2.0.0",
     "cssselect>=1.2.0",
-    "requests=2.32.3",
-    "bs4=0.0.2",
-    "lxml=5.3.0"
+    "requests==2.32.3",
+    "bs4==0.0.2",
+    "lxml==5.3.0"
 ]
 
 [project.optional-dependencies]
